--- a/Clicker/app_state.json
+++ b/Clicker/app_state.json
@@ -73,10 +73,9 @@
       678
     ]
   ],
-  "min_delay": 2000,
-  "max_delay": 4000,
+  "mode": 1,
+  "min_delay": 1700,
+  "max_delay": 3500,
   "speed_factor": 1,
-  "current_mode": 1,
-  "is_capturing": true,
   "always_on_top": true
 }
